--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+h1,h2,h3,h4,h5{
+    color: rgb(216, 133, 0);
+    text-shadow: 3px 2px black;
+    
+}
+h4{
+    color: white;
+}
+p{
+    font-size: 1.2em;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    
+}
+
+.card{
+    box-sizing: border-box;
+    box-shadow: 0px 2px 3px black;
+    
+}
