--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,9 +1,17 @@
 <section class="about-section container" id="about">
    <div class="title container"><h2 class="mt-5 mb-4"><b>About</b> </h2></div>
    <div class="about-wrapper card">
-      
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae vel voluptate sit aspernatur ut mollitia aperiam temporibus architecto, adipisci nobis. Aliquam dignissimos fugiat accusantium dolor assumenda, minus nulla sed consequatur harum molestiae. Culpa possimus velit illum nostrum consectetur ipsa? Quae vitae aspernatur fugiat veniam. Exercitationem, neque! Expedita cumque, ad laudantium, aspernatur veritatis quisquam ipsa repudiandae, ex nam officia mollitia! Alias reprehenderit tenetur necessitatibus ipsam expedita dolorem fugiat, exercitationem, laudantium saepe perspiciatis doloremque, accusantium architecto? Eius, quaerat dolor soluta ipsum delectus quidem cumque. Quas, aperiam, magni cumque ipsam atque soluta in fuga, cupiditate saepe distinctio porro quo vitae asperiores libero voluptate. Aspernatur itaque voluptatum, deleniti fugiat consectetur, pariatur possimus aliquam optio tenetur assumenda ipsam quae illo eaque alias ad veniam ratione.</p>
-      <a class="btn btn-primary" href="#">Resume</a>
+      <div class="row">
+         <div class="col-md-4">
+            <div class="myPic">
+               <img src="../../../assets/alian1.png" alt="" srcset="">
+            </div>
+         </div>
+         <div class="col-md-8">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, obcaecati quas. Tempore optio ab deserunt laboriosam. Enim accusantium nostrum nulla perferendis odit quibusdam quisquam neque natus rerum, quae placeat molest Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad distinctio ipsa odio tempore nesciunt eum temporibus quaerat accusantium, id at.</p>
+         </div>
+         
+      </div>
    </div>
-   <i class="fas fa-phone"></i>
+   
 </section>
