--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,15 +1,27 @@
 <section class="container" id="contact">
    
     <div class="contact-wrapper container">
-    <h2>Contact</h2>
-        <form action="submit" method="post">
-            <div class="contact-wrapper card">
-                 <input type="text" class="from" id="from" placeholder="From:">
-                 <input type="text" class="topic" id="topic" placeholder="Topic:">
-                 <textarea name="content" id="content" cols="30" rows="10" placeholder="Message Content"></textarea>
-                 <button class="btn btn-primary">Send</button>
+        <div class="title container"></div><h2><b>Contact</b> </h2>
+        <div class="form-wrapper row">
+            <div class="col-md-7 contactme">
+                <div><h3>Send me a message</h3></div>
+                <form action="submit" method="post">
+                    <div class="contact-wrapper card">
+                        
+                         <input type="text" class="from" id="from" placeholder="From: juanperez@example">
+                         <input type="text" class="topic" id="topic" placeholder="Topic:">
+                         <textarea name="content" id="content" cols="30" rows="10" placeholder="Message Content"></textarea>
+                         <button class="btn btn-primary">Send</button>
+                    </div>
+                 </form>
             </div>
-         </form>
+             
+            <div class="col-md-5 contactme">
+            <div><h3>On social Networks</h3></div>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione nisi a eum deserunt, sunt laborum voluptates accusamus ea eius? Aliquam!</p>
+             </div>
+            
+        </div>
     </div>
 </section>
 
