--- a/src/app/components/demo/demo.component.html
+++ b/src/app/components/demo/demo.component.html
@@ -1,5 +1,7 @@
-<section #show class="exterior">
+<section #show class="exterior d-none">
+    <span> Watch the code here</span>
     <div class="linkwrapper container">
+        
     </div>
         
     
