--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -9,3 +9,15 @@
     border-radius: 10px;
     padding: 40px;
 }
+.myPic{
+    text-align: center;
+}
+
+img{
+    width: 100;
+    height: 100;
+}
+.paragrph{
+    margin-top: 20px;
+}
+
