--- a/src/app/components/demo/demo.component.css
+++ b/src/app/components/demo/demo.component.css
@@ -1,14 +1,20 @@
 .exterior{
     box-sizing: border-box;
     position: absolute;
-    background-color: rgba(0, 0, 0, 0.164);
+    background-color: rgba(0, 0, 0, 0.0);
     width: 100%;
-    height: 100%;
+    height: 60%;
     transition: 400ms;
-    
+    color: transparent;
+    font-size: 1.5em;
+    text-align: center;
+       
 }
+
+
 .exterior:hover{
 background-color: rgb(192, 192, 192);
+color: black;
 }
 .linkwrapper{
     position: relative;
