--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -7,10 +7,10 @@
         <div  class="row">
             <div #row class="col-lg-4"   *ngFor="let item of proyects">
                 <div class="card mb-3">
-                    <app-demo *ngIf= visible class="demoShow" id="demoShow"></app-demo>
+                    <app-demo  class="demoShow" id="demoShow"></app-demo>
                    <div class="demos container mt-4">
                     
-                        <img src="../../../assets/barza.png" alt="demo_pic" srcset="">
+                        <a href="#"><img src="../../../assets/barza.png" alt="demo_pic" srcset=""></a> 
                         <div class="description container">
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime deserunt rerum repudiandae ipsam ut voluptate sed facere vitae omnis perspiciatis? </p>
                             
