--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -17,8 +17,17 @@
             </div>
              
             <div class="col-md-5 contactme">
-            <div><h3>On social Networks</h3></div>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione nisi a eum deserunt, sunt laborum voluptates accusamus ea eius? Aliquam!</p>
+                
+                <div class="social-wrapper">
+                    <div>
+                        <h3>On social Networks</h3>
+                    </div>
+                    <div class="social">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione nisi a eum deserunt, sunt laborum voluptates accusamus ea eius? Aliquam!</p>
+                    </div>
+                    
+                </div>
+                
              </div>
             
         </div>
