--- a/src/app/components/landingpage/landingpage.component.html
+++ b/src/app/components/landingpage/landingpage.component.html
@@ -27,7 +27,7 @@
 
 <!-- Other Sections -->
 <div class="sections-wrapper container">
-    <app-portfolio class="app-portfolio app"></app-portfolio>
+    <app-portfolio class="app-portfolio app" id = "portafolio"></app-portfolio>
     <app-about class="app-about app"></app-about>
     <app-contact class="app-contact app"></app-contact>
 </div>
