--- a/src/app/components/portfolio/portfolio.component.css
+++ b/src/app/components/portfolio/portfolio.component.css
@@ -1,14 +1,15 @@
-p{
-    font-size: 1.2em;
-}
 
 section{
     background-color: rgba(0, 0, 0, 0.061);
-   
+    
     padding: 10px;
     padding-bottom: 20px;
     padding-top: 50px;
+    
 }
+
+
+
 
 .row{
     padding-bottom: 20px;
@@ -28,12 +29,12 @@ section{
 }
 .demos{
     background-color: transparent;
-    padding: 20px 5px;
+    padding: 20px 0px;
     text-align: center;
     max-width: 300px;
 }
 .demos img{
-    width: 90%;
+    width: 70%;
     /* border: black 3px solid; */
     /* box-shadow: 0px 0px 8px 0 black; */
     border-radius: 3px;
@@ -46,6 +47,18 @@ section{
     margin-top: 20px;
     /* text-shadow: 2px 2px 2px black; */
 }
+
+@media(min-width:1024px){
+    
+    .demos img{
+        width: 90%;
+        /* border: black 3px solid; */
+        /* box-shadow: 0px 0px 8px 0 black; */
+        border-radius: 3px;
+        transition: 500;
+    }
+}
+
 
 
 
