--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@ h4{
     color: white;
 }
 p{
-    font-size: 1.2em;
+    font-size: 0.9em;
     font-family: Georgia, 'Times New Roman', Times, serif;
     
 }
@@ -18,4 +18,10 @@ p{
     box-shadow: 0px 2px 3px black;
     background-color:#02424641;
     
+}
+
+@media(min-width:1024px){
+    p{
+        font-size: 1.1em;
+    }
 }
