--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,4 +1,5 @@
-<section class="about-section container" id="about">
+<section  class="about-section container" id="about">
+<div [@show]="!muestra? 'void':'enter'">
    <div class="title container"><h2 class="mt-5 mb-4"><b>About</b> </h2></div>
    <div class="about-wrapper card">
       <div class="row">
@@ -8,10 +9,15 @@
             </div>
          </div>
          <div class="col-md-8">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, obcaecati quas. Tempore optio ab deserunt laboriosam. Enim accusantium nostrum nulla perferendis odit quibusdam quisquam neque natus rerum, quae placeat molest Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad distinctio ipsa odio tempore nesciunt eum temporibus quaerat accusantium, id at.</p>
+            <div class="about-coments">
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, obcaecati quas. Tempore optio ab deserunt laboriosam. Enim accusantium nostrum nulla perferendis odit quibusdam quisquam neque natus rerum, quae placeat molest Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad distinctio ipsa odio tempore nesciunt eum temporibus quaerat accusantium, id at.</p>
+            </div>
+            
          </div>
          
       </div>
    </div>
+</div>
+   
    
 </section>
