--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -5,12 +5,12 @@
         <div class="form-wrapper row">
             <div class="col-md-7 contactme">
                 <div><h3>Send me a message</h3></div>
-                <form action="submit" method="post">
+                <form>
                     <div class="contact-wrapper card">
                         
                          <input type="text" class="from" id="from" placeholder="From: juanperez@example">
                          <input type="text" class="topic" id="topic" placeholder="Topic:">
-                         <textarea name="content" id="content" cols="30" rows="10" placeholder="Message Content"></textarea>
+                         <textarea  name="content" id="content" cols="30" rows="10" placeholder="Message Content"></textarea>
                          <button class="btn btn-primary">Send</button>
                     </div>
                  </form>
