--- a/src/app/components/demo/demo.component.html
+++ b/src/app/components/demo/demo.component.html
@@ -1,4 +1,4 @@
-<section #show class="exterior d-none">
+<section #show class="exterior">
     <span> Watch the code here</span>
     <div class="linkwrapper container">
         
