--- a/src/app/components/demo/demo.component.css
+++ b/src/app/components/demo/demo.component.css
@@ -1,21 +1,21 @@
 .exterior{
     box-sizing: border-box;
     position: absolute;
-    background-color: rgba(0, 0, 0, 0.0);
+    background-color: rgb(192, 192, 192);
     width: 100%;
-    height: 60%;
+    height: 100%;
     transition: 400ms;
-    color: transparent;
+    color: black;
     font-size: 1.5em;
     text-align: center;
        
 }
 
 
-.exterior:hover{
+/* .exterior:hover{
 background-color: rgb(192, 192, 192);
 color: black;
-}
+} */
 .linkwrapper{
     position: relative;
     display: flex;
