factorizando con services

--- a/src/app/components/demo/demo.component.html
+++ b/src/app/components/demo/demo.component.html
@@ -1,8 +1,45 @@
-<section #show class="exterior">
-    <span> Watch the code here</span>
-    <div class="linkwrapper container">
+<section #show class="exterior ">
+    
+    <div class="linkwrapper container card">
+    <header>
+        <div class="none">
+        </div>
+        <div class="information container">
+            <h2> Watch the code here</h2>
+            <h3>Name of the App</h3>
+        </div>
+       
+    </header>
+        
+        <div class="codeLines row">
+            <div class="col-xl-4 html-wrapper">
+                <div class="title container"><h4>HTML</h4></div>
+                <div class="content">
+                    <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam aperiam illum commodi rerum obcaecati enim labore, cumque quia cupiditate distinctio? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, excepturi accusamus aliquid dicta quibusdam animi voluptates mollitia saepe enim inventore quod dolorem praesentium ipsum asperiores ad iure id sequi quae Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut aspernatur quae et dolores eaque laborum accusamus assumenda, blanditiis cumque consequatur, nemo earum libero nostrum consequuntur odio porro, magni nihil perspiciatis! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id accusantium, quis consequatur ipsam itaque aliquid sed modi qui! Error, quasi! Esse nemo eos laboriosam ipsum qui nulla porro, quidem, provident beatae quos eligendi molestiae labore voluptatum quas eius quae doloribus debitis itaque animi molestias explicabo corrupti eum? Voluptatum sed aliquam eos, repellendus incidunt corrupti voluptatem nostrum ducimus omnis error magnam ipsam temporibus sit, consectetur beatae reprehenderit nam perspiciatis minus commodi eligendi? Blanditiis inventore perferendis magnam, placeat doloribus distinctio culpa impedit, nostrum voluptas perspiciatis consequuntur voluptates dolorem alias enim eligendi fugiat ipsam quibusdam pariatur? Quo voluptatem deserunt esse qui illum labore alias dolor minus at, perspiciatis a quidem tempore placeat natus ut accusantium doloribus maiores atque ex molestiae voluptas ullam libero autem assumenda? Hic inventore repellat quas eligendi quos facilis maxime, quibusdam pariatur quaerat repudiandae quasi atque, nobis autem recusandae. Assumenda quo hic tempore aspernatur, facere sapiente? Architecto ipsum et, ipsa facere, consectetur explicabo, optio dolore dicta fugiat magnam nihil quidem numquam unde! Vel aut necessitatibus temporibus veniam, ab ea, qui id eum quidem delectus, alias vitae architecto eius! Laboriosam unde nemo consequuntur debitis at. Quia ex pariatur minus temporibus, sed non totam maiores rem a cupiditate distinctio, quibusdam deserunt optio?</span>
+                </div>
+                
+            </div>
+            <div class="col-xl-4 css-wrapper">
+                <div class="title"><h4>CSS</h4></div>
+                <div class="content">
+                    <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam aperiam illum commodi rerum obcaecati enim labore, cumque quia cupiditate distinctio? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, excepturi accusamus aliquid dicta quibusdam animi voluptates mollitia saepe enim inventore quod dolorem praesentium ipsum asperiores ad iure id sequi quae! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil nisi repellat odit eum, fugiat neque commodi dicta ratione eligendi velit asperiores quaerat repudiandae doloremque soluta enim ipsum amet. Soluta, in. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem mollitia error dignissimos optio tempora asperiores placeat modi aliquam explicabo vel. Sint necessitatibus quidem unde optio laborum vero quis dolore numquam nostrum temporibus distinctio perspiciatis dolor rerum sed cupiditate facere nemo expedita tempora ad explicabo a, magnam ipsum dignissimos. Ipsum maiores aperiam dolor consequatur ratione distinctio doloribus aliquam aliquid sunt ad deleniti impedit assumenda perspiciatis quisquam modi quaerat in voluptatem, quibusdam similique magnam tempore repellat perferendis quo. Eum accusantium repudiandae omnis dolorum reiciendis odit vel culpa molestiae maxime, assumenda labore exercitationem odio ipsum iusto aut aspernatur obcaecati dolores aliquam dignissimos quo! Placeat excepturi enim modi. Quae blanditiis doloribus et eaque delectus qui sunt voluptate! Nam dicta quasi saepe voluptate mollitia ullam numquam ea porro, autem deleniti ipsum tempore iste commodi nesciunt? Sit et doloremque beatae veniam sed rem quae dolorem excepturi velit fugiat! Sequi itaque laborum sapiente asperiores non harum ut in officiis, perspiciatis hic excepturi quod vero ea voluptatem corporis amet reiciendis exercitationem incidunt illo. Aliquam recusandae, velit quia voluptas consectetur eligendi laborum provident quo sapiente tempora in quasi ut, rerum quas labore quibusdam voluptates ipsum temporibus reiciendis sint, nisi at. Pariatur dolore quam atque qui accusamus! Adipisci, laudantium libero.</span>
+                </div>
+                
+            </div>
+            <div class="col-xl-4 css-wrapper">
+                <div class="title"><h4>JavaScript</h4></div>
+                <div class="content">
+                    <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam aperiam illum commodi rerum obcaecati enim labore, cumque quia cupiditate distinctio? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, excepturi accusamus aliquid dicta quibusdam animi voluptates mollitia saepe enim inventore quod dolorem praesentium ipsum asperiores ad iure id sequi quae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis explicabo impedit molestias natus nobis fugit, soluta quo delectus velit, sit dolorem quia, illo porro optio minus voluptas animi odit sequi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae aliquam quaerat nobis aut nulla, nam provident eum incidunt. Possimus magnam facilis ex consectetur debitis eum dolorem voluptatibus vero praesentium. Eligendi odio ad repellat sit eaque voluptatem, perferendis qui non est, ullam odit quod autem quis aut modi deserunt commodi veritatis. Corporis consequatur debitis deserunt provident sit dolor ex ullam porro adipisci quos dicta magnam sequi eius, iure maxime, velit voluptatem culpa itaque fugiat laudantium dolorem. Iure perspiciatis fuga facilis quos eos unde, error voluptas neque quam, non quae! Minima nemo incidunt, tempora labore necessitatibus ipsum iste quae nobis at nihil excepturi ducimus tenetur fuga eveniet cum nam aliquam eligendi eos. Quas perspiciatis illum vitae similique eaque vero consequatur, earum quasi accusamus. Laborum reiciendis iste voluptates quibusdam eos. Minus tempora eveniet deserunt pariatur recusandae accusantium quae eius voluptatem molestiae quasi, veritatis atque, perspiciatis maxime veniam vitae perferendis error suscipit et odit. Non explicabo tenetur modi blanditiis nemo commodi id, a corporis vel nam, libero aliquam magni quia natus maiores beatae obcaecati? Tenetur accusamus tempora, omnis rem incidunt hic. Ratione neque, aspernatur exercitationem molestiae quidem illo doloribus ullam illum facere, impedit iste natus minus accusantium, enim necessitatibus laboriosam tenetur assumenda sed eius?</span>
+                </div>
+                    
+            </div>
+        </div>
+        <div class="container to-close">
+            <button class="btn btn-danger">close</button>
+        </div>
         
     </div>
+    
         
     
 </section>
