--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,17 +1,17 @@
-<section class="container" id="contact">
+<section  class="container" id="contact">
    
-    <div class="contact-wrapper container">
+    <div [@show]="!muestra? 'void':'enter'" class="contact-wrapper container">
         <div class="title container"></div><h2><b>Contact</b> </h2>
         <div class="form-wrapper row">
             <div class="col-md-7 contactme">
                 <div><h3>Send me a message</h3></div>
-                <form>
+                <form (ngSubmit)='sendData(mailForm.value)' [formGroup]='mailForm'>
                     <div class="contact-wrapper card">
                         
-                         <input type="text" class="from" id="from" placeholder="From: juanperez@example">
-                         <input type="text" class="topic" id="topic" placeholder="Topic:">
-                         <textarea  name="content" id="content" cols="30" rows="10" placeholder="Message Content"></textarea>
-                         <button class="btn btn-primary">Send</button>
+                         <input formControlName='mail' type="text" class="from" id="from" placeholder="From: john_doe@example">                         
+                         <input formControlName='topic' type="text" class="topic" id="topic" placeholder="Topic:">
+                         <textarea formControlName='contentMsj' name="content" id="content" cols="30" rows="10" placeholder="Message Content"></textarea>
+                         <button [disabled]='mailForm.invalid' type="submit" class="btn btn-primary">Send</button>
                     </div>
                  </form>
             </div>
