--- a/src/app/components/demo/demo.component.css
+++ b/src/app/components/demo/demo.component.css
@@ -1,6 +1,6 @@
 .exterior{
     box-sizing: border-box;
-    position: absolute;
+    position: relative;
     background-color: rgb(192, 192, 192);
     width: 100%;
     height: 100%;
@@ -10,7 +10,14 @@
     text-align: center;
        
 }
+.title{
+    
+    position: inherit;
+}
 
+header{
+    display: flex;
+}
 
 /* .exterior:hover{
 background-color: rgb(192, 192, 192);
@@ -19,10 +26,38 @@ color: black;
 .linkwrapper{
     position: relative;
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-evenly;
     top: 50%;
 }
 
+.codeLines{
+    margin-top: 20px;
+    padding: 10px;
+}
+
+.col-xl-4{
+    max-height: 350px;
+    
+    margin-bottom: 10px;
+    position: relative;
+    background-color: rgb(51, 51, 51);
+    overflow-y: scroll;
+    
+    border: rgb(0, 0, 0) 2px solid;
+}
+
+.content{
+    text-align: left;
+    
+}
+span{
+    font-family:monospace;
+    font-size: 0.5em;
+    color: white;
+}
+
+.to-close{
+    text-align: right;
+}
 
 
