--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -4,43 +4,12 @@
             <h2 class="mt-5 mb-4"><b>Portfolio</b></h2>
         </div>
         
-        <div  class="row">
-            <div #row class="col-lg-4">
-                <div class="card mb-3">
-                    <!-- <app-demo *ngIf="demoMuestra" class="demoShow" id="demoShow1"></app-demo> -->
-                   <div class="demos container mt-4">
-                    
-                        <img class="btn"  src="../../../assets/barza.png" alt="demo_pic" srcset=""> 
-                        <div class="description container-fluid">
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime deserunt rerum repudiandae ipsam ut voluptate sed facere vitae omnis perspiciatis? </p>
-                            
-                       </div>
-                   </div> 
-                  
-                </div>
-            </div>
+        <div *ngIf="!demoMuestra" class="row">
             
-            <div #row class="col-lg-4">
+            <div #row *ngFor="let proyect of proyects" class="col-lg-4">
                 <div class="card mb-3">
-                    <!-- <app-demo *ngIf="demoMuestra" class="demoShow" id="demoShow2"></app-demo> -->
                    <div class="demos container mt-4">
-                    
-                        <img class="btn"  src="../../../assets/barza.png" alt="demo_pic" srcset="">
-                        <div class="description container-fluid">
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime deserunt rerum repudiandae ipsam ut voluptate sed facere vitae omnis perspiciatis? </p>
-                            
-                       </div>
-                   </div> 
-                  
-                </div>
-            </div>
-            
-            <div #row class="col-lg-4">
-                <div class="card mb-3">
-                    <!-- <app-demo *ngIf="demoMuestra" class="demoShow" id="demoShow3"></app-demo> -->
-                   <div class="demos container mt-4">
-                    
-                        <img class="btn" id="thirdbtn" src="../../../assets/barza.png" alt="demo_pic" srcset=""> 
+                        <img  class="btn btn-apps" (click)="openDemo($event)" src={{proyect.picture}} alt="demo_pic" srcset=""> 
                         <div class="description container-fluid">
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime deserunt rerum repudiandae ipsam ut voluptate sed facere vitae omnis perspiciatis? </p>
                             
@@ -50,6 +19,9 @@
                 </div>
             </div>
         </div>
+        
+        
+        <app-demo *ngIf="demoMuestra" class="demoShow container" id="demoShow1"></app-demo>
     
     </div>
 </section>
