fill  portfolio section

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,23 +1,22 @@
 <section  class="about-section container" id="about">
-<div [@show]="!muestra? 'void':'enter'">
-   <div class="title container"><h2 class="mt-5 mb-4"><b>About</b> </h2></div>
-   <div class="about-wrapper card">
-      <div class="row">
-         <div class="col-md-4">
-            <div class="myPic">
-               <img src="../../../assets/alian1.png" alt="" srcset="">
+   <div [@show]="!muestra? 'void':'enter'">
+      <div class="title container"><h2 class="mt-5 mb-4"><b>About</b> </h2></div>
+      <div class="about-wrapper card">
+         <div class="row">
+            <div class="col-md-4">
+               <div class="myPic">
+                  <img src="../../../assets/alian1.png" alt="" srcset="">
+               </div>
             </div>
-         </div>
-         <div class="col-md-8">
-            <div class="about-coments">
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, obcaecati quas. Tempore optio ab deserunt laboriosam. Enim accusantium nostrum nulla perferendis odit quibusdam quisquam neque natus rerum, quae placeat molest Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad distinctio ipsa odio tempore nesciunt eum temporibus quaerat accusantium, id at.</p>
+            <div class="col-md-8">
+               <div class="about-coments">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, obcaecati quas. Tempore optio ab deserunt laboriosam. Enim accusantium nostrum nulla perferendis odit quibusdam quisquam neque natus rerum, quae placeat molest Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad distinctio ipsa odio tempore nesciunt eum temporibus quaerat accusantium, id at.</p>
+               </div>
+               <a class="btn btn-primary" target="_blank" href="../../../assets/CV Manuel Alejandro Medina Cabrera.pdf">Download my C.V</a>
             </div>
             
          </div>
-         
       </div>
+      
    </div>
-</div>
-   
-   
 </section>
