--- a/src/app/components/demo/demo.component.html
+++ b/src/app/components/demo/demo.component.html
@@ -2,13 +2,10 @@
     
     <div class="linkwrapper container card">
     <header>
-        <div class="none">
-        </div>
-        <div class="information container">
-            <h2> Watch the code here</h2>
+        <div class="information">
+            
             <h3>Name of the App</h3>
         </div>
-       
     </header>
         
         <div class="codeLines row">
@@ -34,9 +31,7 @@
                     
             </div>
         </div>
-        <div class="container to-close">
-            <button class="btn btn-danger">close</button>
-        </div>
+        
         
     </div>
     
