--- a/src/app/components/landingpage/landingpage.component.html
+++ b/src/app/components/landingpage/landingpage.component.html
@@ -7,12 +7,12 @@
         <header class="wow fadeInUp">
             <div class="landing-wrapper container">
                 <div class="row">
-                    <div @initState class="col-md-9 greetings">
+                    <div @initState class="col-lg-9 greetings">
                         <h1>Hello, I'm Alian!!</h1>
-                        <h4>A freelance Web Developer who loves profesional challenges</h4>
+                        <h4>A Web Developer who loves profesional challenges</h4>
                     </div>
                     
-                    <div @initStateBrand class="col-md-3 logo">
+                    <div @initStateBrand class="col-lg-3 logo">
                         
                             <img  #brand src="../../../assets/favico.png" alt=" Logo" srcset=""> 
                         
