--- a/src/app/components/demo/demo.component.css
+++ b/src/app/components/demo/demo.component.css
@@ -15,10 +15,6 @@
     position: inherit;
 }
 
-header{
-    display: flex;
-}
-
 /* .exterior:hover{
 background-color: rgb(192, 192, 192);
 color: black;
@@ -57,6 +53,9 @@ span{
 }
 
 .to-close{
+    text-align: right;
+}
+.informacion{
     text-align: right;
 }
 
