--- a/src/app/components/portfolio/portfolio.component.css
+++ b/src/app/components/portfolio/portfolio.component.css
@@ -21,11 +21,11 @@ section{
     box-sizing: border-box;
     
     
+    
 }
 .card{
     color: rgb(0, 0, 0);
     background-color:#02424641;
-    
     box-sizing: border-box;
     
     margin: auto;
@@ -48,17 +48,26 @@ section{
 .description{
     text-align: left;
     margin-top: 20px;
-    /* text-shadow: 2px 2px 2px black; */
-}
+    /* max-height: 160px; */
+    overflow-y: auto;
+    scroll-behavior: unset;
 
+}
+.buttuncont{
+    text-align: center;
+}
 @media(min-width:1024px){
     
     .demos img{
-        width: 90%;
+        width: 80%;
         /* border: black 3px solid; */
         /* box-shadow: 0px 0px 8px 0 black; */
         border-radius: 3px;
-        transition: 500;
+        transition: 0.5s;
+    }
+    .demos img:hover{
+        
+        width: 82.5%;
     }
    
 }
