--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,5 +1,5 @@
 .footer-section{
     color: white;
     text-align: center;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.938);
 }
