--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -12,9 +12,11 @@
                    <a href={{proyect.url}} target="_blank"> <img  class="btn btn-apps"  src={{proyect.picture}} alt="demo_pic" srcset=""></a>
                         
                         <div class="description container-fluid">
-                            <p>Lorem ipsum dolor sit, amet consectetur Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis eum reprehenderit esse tempore id, corporis aliquam dicta dolorem omnis eius! adipisicing elit. Maxime deserunt rerum repudiandae ipsam ut voluptate sed facere vitae omnis perspicia </p>
+                            <p>{{proyect.description}}</p>
                             
                        </div>
+                       <div class="container"><a class="btn btn-primary" href={{proyect.url_gitHub}} target="_blank">View Code</a></div>
+                       
                    </div> 
                   
                 </div>
