--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -4,13 +4,14 @@
         <div class="title container"></div><h2><b>Contact</b> </h2>
         <div class="form-wrapper row">
             <div class="col-md-7 contactme">
-                <div><h3>Send me a message</h3></div>
+                <div><h3>Email me</h3></div>
                 <form (ngSubmit)='sendData(mailForm.value)' [formGroup]='mailForm'>
                     <div class="contact-wrapper card">
                         
-                         <input formControlName='mail' type="text" class="from" id="from" placeholder="From: john_doe@example">                         
-                         <input formControlName='topic' type="text" class="topic" id="topic" placeholder="Topic:">
-                         <textarea formControlName='contentMsj' name="content" id="content" cols="30" rows="10" placeholder="Message Content"></textarea>
+                                                 
+                         <input formControlName='from' type="text" class="from" id="from" placeholder="From: John Doe">
+                         <input formControlName='subject' type="text" class="subject" id="subject" placeholder="subject">
+                         <textarea formControlName='msjContent' name="content" id="content" cols="30" rows="10" placeholder="Message Content"></textarea>
                          <button [disabled]='mailForm.invalid' type="submit" class="btn btn-primary">Send</button>
                     </div>
                  </form>
