--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<section class="footer-section">
+<section class="footer footer-section">
     <span>My Portfolio </span> <br>
     Alian Medina 2021 &copy;
 </section>
