--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -6,22 +6,63 @@
     user-select: none;
   }
   nav{
-    z-index: 50;
+    z-index: 20;
     width: 100%;
-    position: fixed;
+    position: absolute;
    
+    }
+    
+  .strip-nav-exterior{
+    z-index: 50;
+    position: absolute;
+    background-color: transparent;
+    width: 230px;
+    padding-bottom: 2px;
+    padding-top: 40px;
+    left: -180px;
+    transition: .5s;
+    height: 30px;
+  }
+  .strip-nav-exterior:hover{
+    left: 0;
+    transition: 0.7s;
+    height: auto;
+    background-color: rgb(31, 29, 34);
+    border-radius: 10px;
+    
+  }
+ 
+  
+  .list-wrapper{
+  background-color: transparent;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    box-sizing: content-box;
+    max-width: 170px;
+  }
+  .list-wrapper li{
+    padding-left: 30px;
+  }
+  
+  .list-wrapper li a{
+  display: inline-block;
+  color: aliceblue;
+  }
+  .list-wrapper li a:hover{
+    text-decoration: underline 2px solid white;
     }
    
   img{
     padding-left: 10px;
     width: 65px;
+    height: 20px;
   }
+  
   @media (min-width: 768px) {
     .bd-placeholder-img-lg {
       font-size: 3.5rem;
     }
     img{
-      display: none;
       padding-left: 10px;
       width: 65px;
     }
