--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,10 +1,33 @@
-<nav class="navbar d-lg-flex navbar-expand-lg navbar-dark bg-dark" >
-    <div class="container">
-    <img src="../../../assets/favico.png" alt="" srcset="">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+<div class="strip-nav-exterior d-md-none">
+  <div class="list-wrapper ">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link active" aria-current="page" href="#home">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" aria-current="page" href="#portfolio">Portfolio</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" aria-current="page" href="#about">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" aria-current="page" href="#contact" >Contact</a>
+      </li>
+      
+    </ul>
+  </div>
   
+</div>
+
+<nav class="navbar d-md-flex navbar-expand-md navbar-dark bg-dark banner">
+    <div class="container long">
+      <div class="navbar-toggler-icon d-md-none" ></div>
+    
+      <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button> -->
+      
+      <img class="d-md-none" src="../../../assets/favico.png" alt="Alian's Brand" srcset="">
       <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
         <ul class="navbar-nav">
           <li class="nav-item active">
@@ -23,5 +46,7 @@
         </ul>
       </div>
     </div>
+    
+    
   </nav>
   
