primer link de proyecto

--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -9,7 +9,7 @@
             <div #row *ngFor="let proyect of proyects" class="col-lg-4">
                 <div class="card mb-3">
                    <div class="demos container mt-4">
-                   <a href={{proyect.url}} target="_blank"> <img  class="btn btn-apps"  src={{proyect.picture}} alt="demo_pic" srcset=""></a>
+                   <a href=https://alianmc1988.github.io/MiFactura/ target="_blank"> <img  class="btn btn-apps"  src={{proyect.picture}} alt="demo_pic" srcset=""></a>
                         
                         <div class="description container-fluid">
                             <p>{{proyect.description}}</p>
