cambios de estilo de background

--- a/src/app/components/landingpage/landingpage.component.html
+++ b/src/app/components/landingpage/landingpage.component.html
@@ -3,7 +3,7 @@
     <app-navbar class="navigation-component"></app-navbar>
 
     <!-- Main Section -->
-    <main #home id="home">
+    <main #home id="home" style="background-image: url(../../../assets/wallpaperHD.jpg);">
         <header class="wow fadeInUp">
             <div class="landing-wrapper container">
                 <div class="row">
