--- a/src/app/components/landingpage/landingpage.component.css
+++ b/src/app/components/landingpage/landingpage.component.css
@@ -3,7 +3,7 @@ body{
 }
 main{
     height: 100vh;
-    background-image: url(../../../assets/wallpaperHD.jpg);
+    /* background-image: url(../../../assets/wallpaperHD.jpg); */
     background-position: center;    
     position: relative;
     border-bottom: black 5px solid;
