--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,8 @@
 <div class="strip-nav-exterior d-md-none">
   <div class="list-wrapper ">
+    <div class="menu">
+      <h5>Menu</h5>
+    </div>
     <ul class="navbar-nav">
       <li class="nav-item active">
         <a class="nav-link active" aria-current="page" href="#home">Home</a>
@@ -13,8 +16,11 @@
       <li class="nav-item">
         <a class="nav-link" aria-current="page" href="#contact" >Contact</a>
       </li>
-      
     </ul>
+      <div class="menu social-networks">
+        <h5>Social Networks</h5>
+      </div>
+      <ul class=""></ul>
   </div>
   
 </div>
