--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -5,7 +5,7 @@
          <div class="row">
             <div class="col-md-4">
                <div class="myPic">
-                  <img src="../../../assets/alian1.png" alt="" srcset="">
+                  <img src="../../../assets/alian2.png" alt="alianpicture" srcset="">
                </div>
             </div>
             <div class="col-md-8">
