--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,10 +17,26 @@
         <a class="nav-link" aria-current="page" href="#contact" >Contact</a>
       </li>
     </ul>
-      <div class="menu social-networks">
+      <div class="menu  mt-4">
         <h5>Social Networks</h5>
       </div>
-      <ul class=""></ul>
+      <ul class="navbar-nav socialNetworks-list">
+        <li class="nav-item active">
+          <a class="nav-link active" aria-current="page" href="#">Facebook</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="#">Instagram</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="#">Tweeter</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="#" >Linkedin</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="#" >GitHub</a>
+        </li>
+      </ul>
   </div>
   
 </div>
