--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -32,6 +32,7 @@ input, textarea{
 }
 .contactme{
     position: relative;
+    text-align: center;
 }
 h3{
     margin-top: 20px;
@@ -42,6 +43,14 @@ h3{
 }
 .btn{
     border: rgb(61, 61, 61) 2px solid;
+}
+
+.contactme a{
+    color: white;
+    font-size: 1.4em;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    text-decoration: none;
+    text-shadow: 2px 4px 2px black;
 }
 .social-wrapper{
     box-sizing: border-box;
